--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -7,16 +7,18 @@
 
 - id: terraform_validate
   name: Lint Terraform templates
+  description: Validates all Terraform configuration files.
   entry: hooks/terraform_validate.sh
   language: script
-  files: \.tf$
+  files: \.tf(vars)?$
   exclude: \.terraform\/
   types: [file, text, terraform]
 
 - id: terraform_format
   name: Format Terraform templates
+  description: Rewrites all Terraform configuration files to a canonical format.
   entry: hooks/terraform_format.sh
   language: script
-  files: \.tf$
+  files: \.tf(vars)?$
   exclude: \.terraform\/
   types: [file, text, terraform]
